docs/7.55/md/abenabap_declarations.md
---
title: "Declaration Statements"
description: |
  This section describes the declaration statements (or declarative statements) for -   data types and data objects(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abentypes_and_objects.htm), the statements for defining -   classes and interfaces(https://help.sap.com/doc/abapdocu_755_in
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_declarations.htm"
abapFile: "abenabap_declarations.htm"
keywords: ["select", "do", "try", "class", "data", "types", "field-symbol", "abenabap", "declarations"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendeclarations.htm) → 

Declaration Statements

This section describes the declaration statements (or declarative statements) for

-   [data types and data objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abentypes_and_objects.htm),

the statements for defining

-   [classes and interfaces](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenclasses_and_interfaces.htm) and their components,

and the statement for declaring

-   [field symbols](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_field_symbols.htm)

The statements [PARAMETERS](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapparameters.htm) and [SELECT OPTIONS](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapselect-options.htm) for the declaration of input fields on [selection screens](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenselection_screen_glosry.htm "Glossary Entry") are also declarative statements but are listed separately in the corresponding sections.

Hint

In addition to the explicit options for declaring data objects listed here, there are also statements and additions that implicitly declare data objects, such as [SELECTION-SCREEN COMMENT](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapselection-screen_comment.htm). However, most of these statements are obsolete, for example [SUMMING](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapsumming.htm).

Continue
[Data Types and Data Objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abentypes_and_objects.htm)
[Classes and Interfaces (ABAP Objects)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenclasses_and_interfaces.htm)
[Field Symbols](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_field_symbols.htm)